# QSerialTerminal

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.b551b98  DEVEL-WINDOWS.txt  QSerialTerminal.pro  README  README.md  install-cmake.sh  install-qmake.sh  install-qserialterminal-cmake.sh  install-qserialterminal.sh  install.sh  qserialterminal.desktop  run-qserialterminal.sh  testscript.sc  uninstall.sh
android/: AndroidManifest.xml  gradle.properties  gradle.properties~  local.properties  local.properties~
forms/: AboutApplicationWidget.ui  MainWindow.ui  mainwindow.ui  mainwindow.ui.old  settings-dialog.ui
include/: customaction.h  customdialog.h  customlineedit.h  custommenu.h  eventtimer.h  fileutilities.h  generalutilities.h  mainwindow.h  qserialterminalstrings.h  qserialterminalutilities.h  scriptexecutor.h  scriptreader.h  serialcommand.h  serialport.h  serialterminallineedit.h  systemcommand.h  tscriptexecutor.h  tscriptreader.h  tstream.h
resources/: QSerialTerminal.rc  icons.qrc  licenses.qrc
resources/icons/: QSerialTerminal.aps  QSerialTerminal.rc  qserialterminal.rc
resources/licenses/MinGW/: LICENSE
resources/licenses/Qt/: QT-GPLV3-LICENSE
scripts/: blink.sc  bt-can-cycle.sc  can-cycle.sc  can-init.sc  can-read-assy-no.sc  infinite-can-cycle.sc  transistor-test.sc
src/: AboutApplicationWidget.cpp  AboutApplicationWidget.h  ApplicationIcons.cpp  ApplicationIcons.h  ApplicationSettings.cpp  ApplicationSettings.h  ApplicationSettings.hpp  ApplicationSettingsLoader.cpp  ApplicationSettingsLoader.hpp  ApplicationStrings.cpp  ApplicationStrings.h  ApplicationUtilities.cpp  ApplicationUtilities.h  ApplicationUtilities.hpp  ByteArray.cpp  ByteArray.h  CustomAction.cpp  GlobalDefinitions.h  GlobalDefinitions.hpp  IByteStream.cpp  IByteStream.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  ProgramOption.h  ProgramOption.hpp  QActionSetDefs.hpp  QSerialTerminalLineEdit.cpp  SerialPort.cpp  SerialPort.h  SingleInstanceGuard.cpp  SingleInstanceGuard.hpp  Version.hpp  customaction.cpp  customaction.h  customlineedit.cpp  custommenu.cpp  fileutilities.cpp  generalutilities.cpp  (+20 more)
utility/: .qserialterminal.desktop.skel  QSerialTerminal.desktop
